	13306 Battleground_Shuriken_	When attacking, chance to raise attack power of Throw Huuma Shuriken and Final Strike by 100% for 10 seconds
	2379 Wolong's_Battle_Robe	chance to stone enemies for 10 seconds when receiving physical damage
	2380 Robe_of_Order
	2376 General's_Plate_Mail	Increases heal recovery effectiveness on you by 10%

=======================
11/13
	* Rev. 11720 Corrected some of the ep. 12 accessory bonuses. [L0ne_W0lf] 
	- Rev. 11722 Added some premium items (fireworks items and MDef Potions) [Zephyrus]
11/12
	* Rev. 11711 Fixed an item giving 24 of the 'Gladius' item. :P [L0ne_W0lf]
11/10
	* Rev. 11707 Small Item Database update. [L0ne_W0lf]
	- Added some missing items. (Still much more to add)
	  Slow process as I have to translate them myself.
	- Added Battle Ground reward equipment.
	- Implemented some 12.1 equipment bonuses.
	- Added enabling of level 3 Turn Undead back to Grand Cross
11/06
	* Rev. 11686 Fixed Aesprika's item ID. [L0ne_W0lf]
11/05
	* Rev. 11676 Added drops for Event Lude. [L0ne_W0lf]
	* Rev. 11673 Updated some of the 12.1 armor, added Brynhildr and ASepirka. [L0ne_W0lf]
	* Fixed Imp using a too high level of Firebolt [Playtester]
	* Updated DEF and MDEF of Moscovia mobs [Playtester]
11/02
	* Rev. 11641 Minor fixes/updates to various items. [L0ne_W0lf]
	* Added trap mode to Firepillar [Playtester]
	- tell me if it breaks something
10/29
	* Rev. 11615 Updated to fix errors reported by Zephyrus_CR. bugreport:334 [L0ne_W0lf]
10/28
	* Rev. 11598 Corrected Cross Shield bonus. [L0ne_W0lf]
10/26
	* Some small db updates [Playtester]
	- fixed Bongun Card thanks to Gepard
	- updated Ifrit Card to official
	- Fire Wall now has 2 cells knockback
	- set interval values of Fire Wall and Fire Formation to 20ms
10/23
	* Rev. 11559 Added Arunafeltz State WoE maps. [L0ne_W0lf]
10/22
	* Fixed Bowling Bash doing more than 1 tile knockback [Playtester]
10/21
	* Added new cards to drops so they can be tested [Playtester]
	- updated sql files