@@ -763,6 +763,8 @@ SC_INCDEF	262
 SC_INCBASEATK	263
 SC_FASTCAST 264
 SC_INCMDEFRATE	265
+SC_HPREGEN	266
+SC_INCHEALRATE	267
 
 e_gasp	0
 e_what	1
